About: A p5.js tropical cyclone simulation game

v20190413a:
    + Added Atl 1979-1984 name list preset (original iteration of the current Atlantic naming system)
v20190412a:
    * Most likely finally fixed the HiDPI graphical bug for real this time
    % Upgraded p5.js dependency from 0.6.1 to 0.8.0
v20190411a:
    + Added settings menu
        > Accessible from main menu and within a sim basin
        > Currently only includes settings for intensity indicators, autosaving, and track mode
    * Settings added to settings menu are now saved and preserved between reloads (e.g. intensity indicators no longer need to be enabled with every page load)
    * Simulation is automatically paused when loading a saved basin, but still starts unpaused for newly created basins
    * Main rendering and click actions (storm selection/spawning) for basins now tied to primaryWrapper UI element
    * Another attempt to fix the high-density display graphical bug
v20190401a:
    + Added Atlantic basin map
    * Fixed bug with tropical depressions not numbered in loaded basins
    - April Fools! No Atlantic basin map. SAD!
v20190321a:
    * Atlantic name list preset names "Florence" and "Michael" retired and replaced with "Francine" and "Milton"
        > Does not affect old saved basins; only new basins
    - Removed curSeason as a global variable
v20190315a:
    * Storm damage/deaths is now calculated every tick instead of every advisory
v20190310a:
    + Added full saving/loading including active storms, analysis, and environmental data
    + Added safeguard in case one's localStorage quota is reached and they can no longer save
    * Autosaving now happens at the beginning of the 1st and 15th days of a month, rather than every 10 days as before
    * Saved seasons when not the current season nor currently viewed will eventually unload to be RAM-friendly (will automatically load when needed)
    * Fixed a corruption bug with the numerical array compression function
v20190305a: